--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
   #mainNav .navbar-nav li.nav-item a.nav-link {
 	color: #fff;
   }
-/
+
  #mainNav .navbar-nav li.nav-item a.nav-link:hover {
 	color: #18BC9C;
   } 
@@ -168,7 +168,7 @@ body {
   -moz-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  /* background-color: rgba(24, 188, 156, 0.9); */
+  background-color: rgba(24, 188, 156, 0.9);
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
@@ -179,12 +179,55 @@ body {
   font-size: 1.5rem;
 }
 
+.img-fluid {
+	width: 300px;
+	height: 225px;
+}
+.img-responsive {
+	max-width: 100%;
+}
 @media (min-width: 576px) {
   .portfolio {
     margin-bottom: -30px;
   }
   .portfolio .portfolio-item {
     margin-bottom: 30px;
+  }
+}
+
+.portfolio-modal .portfolio-modal-dialog {
+  padding: 3rem 1rem;
+  min-height: calc(100vh - 2rem);
+  margin: 1rem calc(1rem - 8px);
+  position: relative;
+  z-index: 2;
+  -moz-box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
+}
+
+.portfolio-modal .portfolio-modal-dialog .close-button {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+}
+
+.portfolio-modal .portfolio-modal-dialog .close-button i {
+  line-height: 38px;
+}
+
+.portfolio-modal .portfolio-modal-dialog h2 {
+  font-size: 2rem;
+}
+
+@media (min-width: 768px) {
+  .portfolio-modal .portfolio-modal-dialog {
+    min-height: 100vh;
+    padding: 5rem;
+    margin: 3rem calc(3rem - 8px);
+  }
+  .portfolio-modal .portfolio-modal-dialog h2 {
+    font-size: 3rem;
   }
 }
 
